--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -40,6 +40,7 @@
             border-radius: 5px;
         }
 </style>
+<!-- styling ends here  -->
     <title>To-Do App</title> <!-- app name -->
 </head>
 <body> 
